import "webui/common_base.proto";

option java_package = "steam.webui.accountlinking";

message CAccountLinking_GetLinkedAccountInfo_Request {
	optional int32 account_type = 1 [(.description) = "enum"];
	optional uint64 account_id = 2;
	optional int32 filter = 3 [(.description) = "enum"];
	optional bool return_access_token = 4;
}

message CAccountLinking_GetLinkedAccountInfo_Response {
	repeated .CAccountLinking_GetLinkedAccountInfo_Response_CExternalAccountTuple_Response external_accounts = 1;
}

message CAccountLinking_GetLinkedAccountInfo_Response_CExternalAccountTuple_Response {
	optional int32 external_type = 1 [(.description) = "enum"];
	optional string external_id = 2;
	optional string external_user_name = 3;
	optional string external_url = 4;
	optional string access_token = 5;
	optional string access_token_secret = 6;
	optional bool is_valid = 7;
}

service AccountLinking {
	// bConstMethod=true, ePrivilege=0, eWebAPIKeyRequirement=1
	rpc GetLinkedAccountInfo (.CAccountLinking_GetLinkedAccountInfo_Request) returns (.CAccountLinking_GetLinkedAccountInfo_Response);
}

